<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_to_fitpal"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/profile"
            android:src="@drawable/ic_profile_filled" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/white"
            android:padding="8dp"
            android:text="@string/login"
            android:textColor="#B822D3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:padding="8dp"
            android:text="@string/sign_up"
            android:textColor="#B822D3"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/login_google_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_google_logo"
            android:drawablePadding="4dp"
            android:paddingStart="4dp"
            android:paddingTop="1dp"
            android:paddingEnd="35dp"
            android:paddingBottom="1dp"
            android:text="@string/continue_with_google"
            android:textAlignment="center"
            android:textColor="#B822D3"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</RelativeLayout>